--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,15 @@
 {
-	"extends": ["next/core-web-vitals", "prettier"]
+	"extends": ["next/core-web-vitals", "prettier"],
+	"rules": {
+		"import/order": ["warn", {
+			"groups": [
+				["builtin", "external"],
+				"internal",
+				["parent", "sibling", "index"],
+				"type"
+			],
+			"newlines-between": "always",
+			"alphabetize": {"order": "asc"}
+		}]
+	}
 }
