--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@emotion/cache": "^11.7.1",
+		"@emotion/react": "^11.9.0",
+		"@emotion/server": "^11.4.0",
+		"@emotion/styled": "^11.8.1",
+		"@mui/icons-material": "^5.8.0",
+		"@mui/material": "^5.8.1",
 		"dotenv": "^16.0.1",
 		"next": "12.1.6",
 		"next-auth": "^4.3.4",
