--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /.pnp
@@ -11,7 +9,6 @@
 # next.js
 /.next/
 /out/
-.env*
 
 # production
 /build
@@ -29,9 +26,6 @@ yarn-error.log*
 # local env files
 .env*.local
 
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
+# VSCode
 .vscode
+*.code-workspace
