--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@mui/icons-material": "^5.8.0",
 		"@mui/material": "^5.8.1",
 		"dotenv": "^16.0.1",
+		"memoize-one": "^6.0.0",
 		"next": "12.1.6",
 		"next-auth": "^4.3.4",
 		"react": "18.1.0",
