--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"eslint": "8.16.0",
 		"eslint-config-next": "12.1.6",
 		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-unused-imports": "^2.0.0",
 		"prettier": "^2.6.2",
 		"typescript": "4.6.4"
 	},
