--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@emotion/styled": "^11.8.1",
 		"@mui/icons-material": "^5.8.0",
 		"@mui/material": "^5.8.1",
+		"classnames": "^2.3.1",
 		"dotenv": "^16.0.1",
 		"memoize-one": "^6.0.0",
 		"next": "12.1.6",
