--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
 		"next": "12.1.6",
 		"next-auth": "^4.3.4",
 		"react": "18.1.0",
-		"react-dom": "18.1.0"
+		"react-dom": "18.1.0",
+		"react-query": "^3.39.0"
 	},
 	"devDependencies": {
 		"@types/node": "17.0.35",
