--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@mui/material": "^5.8.1",
 		"classnames": "^2.3.1",
 		"dotenv": "^16.0.1",
+		"js-cookie": "^3.0.1",
 		"memoize-one": "^6.0.0",
 		"next": "12.1.6",
 		"next-auth": "^4.3.4",
@@ -25,6 +26,7 @@
 		"react-query": "^3.39.0"
 	},
 	"devDependencies": {
+		"@types/js-cookie": "^3.0.2",
 		"@types/node": "17.0.35",
 		"@types/react": "18.0.9",
 		"@types/react-dom": "18.0.5",
