--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"next-auth": "^4.3.4",
 		"react": "18.1.0",
 		"react-dom": "18.1.0",
+		"react-mui-carousel-artemm": "^3.3.8",
 		"react-query": "^3.39.0"
 	},
 	"devDependencies": {
