--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
 		"@emotion/styled": "^11.8.1",
 		"@mui/icons-material": "^5.8.0",
 		"@mui/material": "^5.8.1",
+		"@next-auth/upstash-redis-adapter": "^3.0.0",
+		"@upstash/redis": "^1.4.0",
 		"classnames": "^2.3.1",
 		"dotenv": "^16.0.1",
 		"js-cookie": "^3.0.1",
-		"memoize-one": "^6.0.0",
+		"mem": "^9.0.2",
 		"next": "12.1.6",
 		"next-auth": "^4.3.4",
 		"react": "18.1.0",
