--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@upstash/redis": "^1.4.0",
 		"classnames": "^2.3.1",
 		"dotenv": "^16.0.1",
+		"google-spreadsheet": "^3.3.0",
 		"js-cookie": "^3.0.1",
 		"mem": "^9.0.2",
 		"next": "12.1.6",
@@ -29,6 +30,7 @@
 		"react-query": "^3.39.0"
 	},
 	"devDependencies": {
+		"@types/google-spreadsheet": "^3.2.2",
 		"@types/js-cookie": "^3.0.2",
 		"@types/node": "17.0.35",
 		"@types/react": "18.0.9",
