--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"dotenv": "^16.0.1",
 		"google-spreadsheet": "^3.3.0",
 		"js-cookie": "^3.0.1",
+		"jsdom": "^19.0.0",
 		"mem": "^9.0.2",
 		"next": "12.1.6",
 		"next-auth": "^4.3.4",
@@ -32,6 +33,7 @@
 	"devDependencies": {
 		"@types/google-spreadsheet": "^3.2.2",
 		"@types/js-cookie": "^3.0.2",
+		"@types/jsdom": "^16.2.14",
 		"@types/node": "17.0.35",
 		"@types/react": "18.0.9",
 		"@types/react-dom": "18.0.5",
